objects/Stage_to_Summary_Stage__c.object
<CustomObject>
    <fields>
        <fullName>EOO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Nbr__c</fullName>
        <label>Stage Nbr</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>PLOC Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Stage_Name__c</fullName>
        <label>Summary Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage to Summary Stage</label>
    <nameField>
        <displayFormat>SS-{0000000000}</displayFormat>
        <label>Stage to Summary Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage to Summary Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>